--- a/magicstyle.css
+++ b/magicstyle.css
@@ -2,14 +2,14 @@
     
         
    
-#div{
+body{
     background: url(../images/pic11.jpg);
     background-color: #d46767;
     background-repeat: no-repeat;
     background-size: cover;
     }
 
-#div1{
+#ball{
     padding-inline-start: 47%;
     padding-top: 2%;
   }  
