--- a/magicstyle.css
+++ b/magicstyle.css
@@ -13,11 +13,11 @@
     }
 
 #ball{
-    background: url(/images/pic11.jpg);
+    background: url(images/pic11.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    padding-inline-start: 47%;
-    padding-top: 0%;
+    padding-inline-start: 49%;
+    padding-top: 3%;
  }  
   
 label {font-size: xx-large;
@@ -28,6 +28,8 @@ input{
     height: 30px;
     font-size: x-large;
     background-color: #d46767;
+    border-width: 4px;
+    margin-bottom: 0.1%;
  }
 
 button{
@@ -37,8 +39,9 @@ button{
     background-color: rgb(79, 36, 180);
 }
 
-h2 {
+div {
 margin: 0%;
+font-size: xx-large;
 font-weight: bold;
 font-style: italic;
 font-family: 'Courier New', Courier, monospace;
